--- a/index.html
+++ b/index.html
@@ -10,12 +10,27 @@
 </head>
 <body>
 
-    <div class="quote_container">
-        <div class="quote_text">
-            <i class="fas fa_quote_left"></i>
+    <div class="quote-container" id="quote-container">
+
+        <div class="quote-text">
+            <i class="fas fa-quote-left"></i>
             <span id="quote">Example quote</span>
         </div>
+
+        <div class="quote-author">
+            <span id="author">Buddha</span>
+        </div>
+
+        <div class="button-container">
+            <button class="twitter-button" id="twitter" title="Tweet This!">
+                <i class="fab fa-twitter"></i>
+            </button>
+
+            <button id="new-quote">New Quote</button>
+        </div>
     </div>
+
+    <div class="loader" id="loader"></div>
 
     <script src="script.js"></script>
     </body>
